<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="0dp"
    android:background="@drawable/back_texture">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:id="@+id/topBar"
        android:background="#ff3fa2ff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:id="@+id/imgfollowLogo"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/follow"
            android:clickable="false"
            android:contentDescription="@string/topBarLogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/placesPageTitle"
            android:id="@+id/placesPageTitle"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:textColor="#ffffff"
            android:inputType="none" />
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topBar"
        android:layout_alignLeft="@+id/topBar"
        android:layout_alignStart="@+id/topBar"
        android:layout_marginBottom="50dp"
        android:padding="4dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/placesBody"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:id="@+id/place1"
            android:padding="8dp"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/placeLogo1"
                android:background="@drawable/rounded_border"
                android:baselineAlignBottom="true" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/placesName1"
                android:id="@+id/placeName1"
                android:inputType="none"
                android:textSize="20sp"
                android:textColor="#2e2e2e"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="-20dp" />

            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="-210dp"
                android:layout_marginTop="75dp"
                android:id="@+id/line1" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/checkPlace1"
                android:background="@drawable/unchecked"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginLeft="-50dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:id="@+id/place2"
            android:padding="8dp"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/placeLogo2"
                android:background="@drawable/rounded_border"
                android:baselineAlignBottom="true" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/placesName2"
                android:id="@+id/placeName2"
                android:inputType="none"
                android:textSize="20sp"
                android:textColor="#2e2e2e"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="-20dp" />

            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="-210dp"
                android:layout_marginTop="75dp"
                android:id="@+id/line2" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/checkPlace2"
                android:background="@drawable/unchecked"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginLeft="-50dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:id="@+id/place3"
            android:padding="8dp"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/placeLogo3"
                android:background="@drawable/rounded_border"
                android:baselineAlignBottom="true" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/placesName3"
                android:id="@+id/placeName3"
                android:inputType="none"
                android:textSize="20sp"
                android:textColor="#2e2e2e"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="-20dp" />

            <View
                android:layout_width="250dp"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="-210dp"
                android:layout_marginTop="75dp"
                android:id="@+id/line3" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/checkPlace3"
                android:background="@drawable/unchecked"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginLeft="-50dp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/btnFollowThese"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnFollowText"
        android:textColor="#ffff"
        android:background="#3fa2ff" />
</RelativeLayout>
